express-ingress.yaml
# fichier de configuration kubernetes pour son réseau
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mongo-express
  labels:
    name: ingress-mongo-express
spec:
  # règles de routage
  rules:
  # ajout d'une url publique et accessible
  - host: mypoulet.super
    # protocol de communication aux services externes
    http:
      paths:
      - path: /
        pathType: Prefix
        # chemin d'accès au service
        backend:
          # cible un service kubernetes
          serviceName: express-service
          # port du service
          servicePort: 8081
