nginx-ingress.yaml
# fichier de configuration kubernetes pour son réseau
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
spec:
  # règles de routage
  rules:
  # ajout d'une url publique et accessible
  - host: monnginx.com
    # protocol de communication aux services externes
    http:
      paths:
      - path: "/"
        pathType: Prefix
        # chemin d'accès au service
        backend:
          # cible un service kubernetes
          service: 
            name: nginx-service
          # port du service
            port:
              number: 8080
